<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.fragment.CreateTaskFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/img_view_task_create"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="?android:attr/activatedBackgroundIndicator"
                            android:contentDescription="TODO"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_task_image" />

                        <Button
                            android:id="@+id/btn_take_image_create"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/take_image" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/title_task_form_create"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:hint="@string/hint_title">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/title_task_input_create"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/description_task_form_create"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="3"
                            android:hint="@string/hint_description">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/description_task_input_create"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_date_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_date"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_time_create"
                    android:gravity="center"
                    android:text="@string/text_time"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/radio_group_create">

                    <RadioButton
                        android:id="@+id/rd_btn_done_create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_done" />

                    <RadioButton
                        android:id="@+id/rd_btn_doing_create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_doing" />

                    <RadioButton
                        android:id="@+id/rd_btn_todo_create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_todo" />
                </RadioGroup>

            </LinearLayout>
    </ScrollView>


</FrameLayout>