<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_userName"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="5dp"
        tools:text="userName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_date_register"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_userName"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/registration_date" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_number_tasks"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_date_register"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/number_tasks" />

    <Button
        android:id="@+id/btn_delete_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_number_tasks"

        android:text="@string/delete" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/btn_delete_user"
        android:background="?android:attr/listDivider" />

</RelativeLayout>